# k2000

./: configure.ac
src/: Makefile.am  k2000.c  k2000.h  main.c
src/kextension/: Makefile  Makefile.am  Makefile.in  k2000webextension.la  k2000webextension_la-kextension.lo  kextension.c
src/kextension/.deps/: k2000webextension_la-kextension.Plo
src/kextension/.libs/: k2000webextension.la  k2000webextension.lai
