dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(k2000, 0.1)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CC








LT_INIT


PKG_CHECK_MODULES(K2000, [gtk+-3.0 >= 2.90.3 webkit2gtk-3.0 webkit2gtk-web-extension-3.0])




AC_OUTPUT([
Makefile
src/Makefile
src/kextension/Makefile
])
